--- a/bitacora.html
+++ b/bitacora.html
@@ -46,16 +46,86 @@
               <div class="accordion-item">
                 <h2 class="accordion-header" id="flush-headingOne">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
-                    <b>Aqui se encuentra las practicas, laboratorios, tareas semanales, etc.</b>
+                    <b>Avance 1 plan de seguridad</b>
                   </button>
                 </h2>
                 <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                   <div class="accordion-body"></div>
                   <h4><b>
                   </b></h4>
-                  <a href="https://drive.google.com/drive/folders/1cIpiz9SMQ6EXdzigku3WGT_waV_5rXNI">Repositorio</a>
+                  <a href="https://docs.google.com/document/d/1wm7cJuc3k7utNrhBvP_s9yFBAmTm89jn/edit">Avance1</a>
                 </div>
               </div>
+              <div class="accordion accordion-flush" id="accordionFlushExample">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="flush-headingOne">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                      <b>Avance 3 Plan de Seguridad</b>
+                    </button>
+                  </h2>
+                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                    <div class="accordion-body"></div>
+                    <h4><b>
+                    </b></h4>
+                    <a href="https://docs.google.com/document/d/1PvOpU8p0VMGA1lo7itQTRu_z6ZX5msY8/edit">Avance3</a>
+                  </div>
+                </div>
+                <div class="accordion accordion-flush" id="accordionFlushExample">
+                    <div class="accordion-item">
+                      <h2 class="accordion-header" id="flush-headingOne">
+                        <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                          <b>Normas ISO 27001 y 27002</b>
+                        </button>
+                      </h2>
+                      <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                        <div class="accordion-body"></div>
+                        <h4><b>
+                        </b></h4>
+                        <a href="https://docs.google.com/presentation/d/1Ng7sg5kz3xKvyLKKoQMu0_E8DY9hl-vA/edit#slide=id.p1">Normas ISO 27001 y 27002</a>
+                      </div>
+                    </div>
+                    <div class="accordion accordion-flush" id="accordionFlushExample">
+                        <div class="accordion-item">
+                          <h2 class="accordion-header" id="flush-headingOne">
+                            <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                              <b>Analisis y Amenazas</b>
+                            </button>
+                          </h2>
+                          <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                            <div class="accordion-body"></div>
+                            <h4><b>
+                            </b></h4>
+                            <a href="https://docs.google.com/document/d/1iM71xYKAYT1rtxtJo6U8IUGAj4WmWp9Q/edit">Actividad</a>
+                          </div>
+                        </div>
+                        <div class="accordion accordion-flush" id="accordionFlushExample">
+                            <div class="accordion-item">
+                              <h2 class="accordion-header" id="flush-headingOne">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                  <b>CSV</b>
+                                </button>
+                              </h2>
+                              <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                <div class="accordion-body"></div>
+                                <h4><b>
+                                </b></h4>
+                                <a href="https://drive.google.com/drive/u/2/folders/1gQigFZbDSOxwMFaCOzTevbrPJPliyirc">CSV</a>
+                              </div>
+                            </div>
+                            <div class="accordion accordion-flush" id="accordionFlushExample">
+                                <div class="accordion-item">
+                                  <h2 class="accordion-header" id="flush-headingOne">
+                                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#flush-collapseOne" aria-expanded="false" aria-controls="flush-collapseOne">
+                                      <b>csvfiles</b>
+                                    </button>
+                                  </h2>
+                                  <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
+                                    <div class="accordion-body"></div>
+                                    <h4><b>
+                                    </b></h4>
+                                    <a href="https://drive.google.com/drive/u/2/folders/17Drnptc4ZnLaOotGI2E0KgUnUVeA4dU6">csvfiles</a>
+                                  </div>
+                                </div>
               <div class="accordion accordion-flush" id="accordionFlushExample">
                 <div class="accordion-item">
                   <h2 class="accordion-header" id="flush-headingOne">
@@ -65,7 +135,7 @@
                   </h2>
                   <div id="flush-collapseOne" class="accordion-collapse collapse" aria-labelledby="flush-headingOne" data-bs-parent="#accordionFlushExample">
                     <div class="accordion-body"></div>
-                    <h4><b>Introduccion a Laravel conectando a una Base de datos MySQL con Laravel
+                    <h4><b>
                     </b></h4>
                     <a href="https://www.youtube.com/watch?v=LqG-NCBH3zw">Link de entrevista</a>
                   </div>
